AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
    external/googletest \
    networking \
    tests

MAINTAINERCLEANFILES = \
    build-aux/ar-lib \
    build-aux/compile \
    build-aux/config.guess \
    build-aux/config.sub \
    build-aux/depcomp \
    build-aux/install-sh \
    build-aux/ltmain.sh \
    build-aux/missing \
    build-aux/test-driver \
    m4/libtool.m4 \
    m4/lt~obsolete.m4 \
    m4/ltoptions.m4 \
    m4/ltsugar.m4 \
    m4/ltversion.m4 \
    aclocal.m4 \
    configure \
    Makefile.in
