AM_CPPFLAGS = \
    -I$(top_srcdir)

noinst_LTLIBRARIES = libnetworking-serial.la

libnetworking_serial_la_SOURCES = \
    Baudrate.cpp \
    Baudrate.h \
    SerialPort.cpp \
    SerialPort.h

headerdir = $(includedir)/networking/serial
header_HEADERS = \
    Baudrate.h \
    SerialPort.h

MAINTAINERCLEANFILES = \
    Makefile.in
